kubernetes/clusters/k0s/storage/minio-operator/tenant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: storage
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: "minio.${DOMAIN}"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: minio
              port:
                name: https-minio
  tls:
    - hosts:
        - "minio.${DOMAIN}"
